--- a/amaroKontrol_wear/mobile/build.gradle
+++ b/amaroKontrol_wear/mobile/build.gradle
@@ -11,18 +11,23 @@ android {
         versionCode 7
         versionName "1.2"
     }
+    
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
-//    compile 'com.google.android.gms:play-services:6.5.87'
     compile project(':swipelistview')
     compile project(':slidingmenu')
     compile project(':phoneWearShared')
